# stargazer

./: .gitignore  README.md  flake.nix  flake.nix.bak  private_key.pem  pyproject.toml
src/app/: app.py  config.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: stargazer.py
src/app/crud/: github_client.py  starneighbours.py
src/app/schemas/: stargazer.py
tests/unit/: test_starneighbours.py
